# storage/api-docs/api-docs.json
@@ -1884,22 +1884,22 @@
                 ]
             }
         },
-        "/api/orders/{orderId}/repay": {
+        "/api/orders/{publicId}/repay": {
             "post": {
                 "tags": [
                     "Orders"
                 ],
                 "summary": "Repay an unpaid order and get a new payment URL",
                 "description": "Repay an unpaid order and get a new payment URL.",
-                "operationId": "67a6206b18ff1004d647862b15994917",
+                "operationId": "fce433de1049c8127922572a15e17713",
                 "parameters": [
                     {
-                        "name": "orderId",
+                        "name": "publicId",
                         "in": "path",
-                        "description": "ID of the order",
+                        "description": "Public ID of the order",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "type": "string"
                         }
                     }
                 ],
@@ -1914,9 +1914,9 @@
                                             "type": "boolean",
                                             "example": true
                                         },
-                                        "order_id": {
-                                            "type": "integer",
-                                            "example": 123
+                                        "public_id": {
+                                            "type": "string",
+                                            "example": "ORDER123"
                                         },
                                         "payment_url": {
                                             "type": "string",
@@ -1956,22 +1956,22 @@
                 ]
             }
         },
-        "/api/orders/{orderId}/status": {
+        "/api/orders/{publicId}/status": {
             "get": {
                 "tags": [
                     "Orders"
                 ],
-                "summary": "Get order status by ID",
-                "description": "Get order status by ID.",
-                "operationId": "e97fdfa60b01f3cb38466dc29fbfcae1",
+                "summary": "Get order status by Public ID",
+                "description": "Get order status by Public ID.",
+                "operationId": "fb9be0636a8d1093fc6ad193849fdbd2",
                 "parameters": [
                     {
-                        "name": "orderId",
+                        "name": "publicId",
                         "in": "path",
-                        "description": "ID of the order",
+                        "description": "Public ID of the order",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "type": "string"
                         }
                     }
                 ],
@@ -2028,22 +2028,22 @@
                 ]
             }
         },
-        "/api/orders/{orderId}": {
+        "/api/orders/{publicId}": {
             "get": {
                 "tags": [
                     "Orders"
                 ],
-                "summary": "Get order details by ID",
-                "description": "Get order details by ID.",
-                "operationId": "b06fd281d8e27f965d7a7aa131ee6284",
+                "summary": "Get order details by Public ID",
+                "description": "Get order details by Public ID.",
+                "operationId": "c6f25093f39f17059de5ab0df91eb826",
                 "parameters": [
                     {
-                        "name": "orderId",
+                        "name": "publicId",
                         "in": "path",
-                        "description": "ID of the order",
+                        "description": "Public ID of the order",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "type": "string"
                         }
                     }
                 ],
@@ -2095,22 +2095,22 @@
                 ]
             }
         },
-        "/api/orders/{orderId}/reserve-time": {
+        "/api/orders/{publicId}/reserve-time": {
             "put": {
                 "tags": [
                     "Orders"
                 ],
                 "summary": "Update reserve time for an unpaid order",
                 "description": "Update reserve time for an unpaid order.",
-                "operationId": "85690c8fe1ce2a80e8171ce5ef2e3bc1",
+                "operationId": "eb96a533ed4e4b53cacb72b50760e149",
                 "parameters": [
                     {
-                        "name": "orderId",
+                        "name": "publicId",
                         "in": "path",
-                        "description": "ID of the order",
+                        "description": "Public ID of the order",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "type": "string"
                         }
                     }
                 ],
